# minimalistic-raytracer

./: .gitignore  CMakeLists.txt  main.cpp
Source/Private/Image/: Image.cpp  PPMHandler.cpp
Source/Public/Image/: Image.hpp  PPMHandler.hpp
